[JENKINS-40256] add mixins for IE11, Edge and both; refine the focus rects for checkbox and radios in both browsers; fall back to sans-serif in IE11 to fix text alignment issue

--- a/less/components/checkbox.less
+++ b/less/components/checkbox.less
@@ -1,3 +1,5 @@
+@import "../mixins/browsers";
+
 .Checkbox {
     .Checkbox-medium;
     display: inline-block;
@@ -58,6 +60,14 @@
         }
     }
 }
+
+.browser-ie11up({
+    .Checkbox input[type="checkbox"]:focus + .Checkbox-indicator,
+    .Checkbox.focus .Checkbox-indicator {
+        .ie11-focus-rect;
+    }
+});
+
 
 .Checkbox-small {
     .svg-icon {
