--- a/less/components/global-styles.less
+++ b/less/components/global-styles.less
@@ -6,7 +6,11 @@
 }
 
 .focus-rect {
-    // need to use blur-radius=1px instead of 2px to avoid IE/Edge centering issue
+    box-shadow: inset 0 0 2px 3px rgba(0, 0, 0, 0.2);
+}
+
+.ie11-focus-rect {
+    // needs a slightly different focus rect in some instances in order to center itself properly
     box-shadow: inset 0 0 1px 3px rgba(0, 0, 0, 0.2);
 }
 
