--- a/less/theme.less
+++ b/less/theme.less
@@ -192,7 +192,7 @@ body {
     background-color: @body-bg;
 }
 
-.ie11({
+.browser-ie11({
     // fix egregious vertical centering issue with Lato in IE11 by falling back to sans-serif
     body {
         font-family: sans-serif !important;
